--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,73 @@
 
     <title></title>
     <link rel="stylesheet" href="./main.css" />
+    <link rel="stylesheet" href="./personal.css" />
     <link rel="icon" href="images/favicon.png" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+      integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+      crossorigin="anonymous"
+    />
   </head>
 
   <body>
-    Resume
+    <main>
+      <aside id="personal">
+        <img id="photo"></img>
+
+        <h1 id="contact">Contact</h1>
+        <ul>
+          <li>
+              <span class="icon fas fa-map-marker-alt"></span>
+            <span class="personal__data"> Poznań 61-131 ul. Polanka 8d/4 </span>
+          </li>
+          <li>
+              <span class="icon fas fa-phone-alt"></span>
+            <span class="personal__data"> +48 669 759 669 </span>
+          </li>
+          <li>
+              <span class="icon fas fa-at"></span>
+            <a
+              href="mailto:adrian950113@gmail.com"
+              class="personal__data--link"
+            >
+              adrian950113@gmail.com
+            </a>
+          </li>
+          <li>
+              <span class="icon fab fa-github"></span>
+            <a href="https://github.com/A-Dabek/" class="personal__data--link">
+              /A-Dabek
+            </a>
+          </li>
+          <li>
+              <span class="icon fab fa-linkedin"></span>
+            <a
+              href="https://www.linkedin.com/in/adrian-d%C4%85bek-6490601bb/"
+              class="personal__data--link"
+            >
+              in/adrian-dąbek-6490601bb
+            </a>
+          </li>
+        </ul>
+      </aside>
+
+      <div id="history">
+        <h1 id="name">Adrian Dąbek</h1>
+        <h2 id="subtitle">Software engineer</h2>
+
+        <section>
+          <h1>Education</h1>
+          <ol>
+            <li></li>
+          </ol>
+        </section>
+      </div>
+    </main>
+    <footer>
+      I hereby give consent for my personal data to be processed for the purpose
+      of conducting recruitment for the position for which I am applying.
+    </footer>
   </body>
 </html>
