add education and experience  sections

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
   <body>
     <main>
       <aside id="personal">
-        <img id="photo"></img>
+        <img id="photo" src="./pobrane.jpg" width="400" height="400"></img>
 
         <h1 id="contact">Contact</h1>
         <ul>
@@ -61,12 +61,39 @@
 
       <div id="history">
         <h1 id="name">Adrian Dąbek</h1>
-        <h2 id="subtitle">Software engineer</h2>
+        <h2 id="name__subtitle">Software engineer</h2>
 
         <section>
-          <h1>Education</h1>
+          <h3 class="section-title">Education</h3>
           <ol>
-            <li></li>
+            <li>
+              <div class="date-range">
+                2014 - 2018
+              </div>
+              <div>
+              <h4 class="list-item__header">Poznań University of Technology</h4>
+              <span class="list-item__subtitle education__title">
+                Engineer of Information Technology and Computer Science
+              </span>
+              </div>
+            </li>
+          </ol>
+        </section>
+
+        <section>
+          <h3 class="section-title">Experience</h3>
+          <ol>
+            <li>
+              <div class="date-range">
+                2017 - today
+              </div>
+              <div>
+              <h4 class="list-item__header"> Apilia Marciniak-Parchimowicz</h4>
+              <span class="list-item__subtitle">
+                Fullstack software engineer
+              </span>
+              </div>
+            </li>
           </ol>
         </section>
       </div>
