--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,7 @@
               <div class="date-range">
                 2014 - 2018
               </div>
-              <div>
+              <div class="list-item__wrapper">
               <h4 class="list-item__header">Poznań University of Technology</h4>
               <span class="list-item__subtitle education__title">
                 Engineer of Information Technology and Computer Science
@@ -87,7 +87,7 @@
               <div class="date-range">
                 2017 - today
               </div>
-              <div>
+              <div class="list-item__wrapper">
               <h4 class="list-item__header"> Apilia Marciniak-Parchimowicz</h4>
               <span class="list-item__subtitle">
                 Fullstack software engineer
@@ -95,6 +95,70 @@
               </div>
             </li>
           </ol>
+        </section>
+
+        <section>
+          <h3 class="section-title">Skills</h3>
+          <div class="skills__container">
+          <div class="skills__wrapper">
+            <h4 class="skills__title">Frameworks</h4>
+            <ol class="skills__list">
+              <li class="skills__list-item">Angular</li>
+                <li class="skills__list-item">Springboot</li>
+                <li class="skills__list-item">React</li>
+                <li class="skills__list-item">Vue</li>
+            </ol>
+          </div>
+          <div class="skills__wrapper">
+            <h4 class="skills__title">Programming languages</h4>
+            <ol class="skills__list">
+                <li class="skills__list-item">Javascript</li>
+                <li class="skills__list-item">Typescript</li>
+                <li class="skills__list-item">Java</li>
+                <li class="skills__list-item">SQL</li>
+                <li class="skills__list-item">Python</li>
+                <li class="skills__list-item">Kotlin</li>
+                <li class="skills__list-item">C</li>
+            </ol>
+          </div>
+          <div class="skills__wrapper">
+            <h4 class="skills__title">Technologies</h4>
+            <ol class="skills__list">
+              <li class="skills__list-item">GIT</li>
+              <li class="skills__list-item">RxJS</li>
+              <li class="skills__list-item">Node.js</li>
+              <li class="skills__list-item">Redux pattern</li>
+              <li class="skills__list-item">HTML 5</li>
+              <li class="skills__list-item">CSS 3</li>
+              <li class="skills__list-item">Keycloak</li>
+              <li class="skills__list-item">Google Firebase</li>
+            </ol>
+          </div>
+          <div class="skills__wrapper">
+            <h4 class="skills__title">Strengths</h4>
+            <ol class="skills__list">
+              <li class="skills__list-item">Clean code</li>
+              <li class="skills__list-item">Reactive programming</li>
+              <li class="skills__list-item">Algorithms</li>
+              <li class="skills__list-item">Functional programming</li>
+            </ol>
+          </div>
+          <div class="skills__wrapper">
+            <h4 class="skills__title">Software</h4>
+            <ol class="skills__list">
+              <li class="skills__list-item">JetBrains software</li>
+              <li class="skills__list-item">Visual Studio Code</li>
+              <li class="skills__list-item">Unix-like OS</li>
+              <li class="skills__list-item">Windows OS & MS software</li>
+            </ol>
+          </div>
+          <div class="skills__wrapper">
+            <h4 class="skills__title">Languages</h4>
+            <ol class="skills__list" style="columns: 1">
+              <li class="skills__list-item">English - advanced</li>
+            </ol>
+          </div>
+          </div>
         </section>
       </div>
     </main>
