--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,8 @@
   <body>
     <main>
       <aside id="personal">
-        <img id="photo" src="./pobrane.jpg" width="400" height="400"></img>
+        <img id="photo" 
+        src="./face.jpg" width="709" height="1024"></img>
 
         <h1 id="contact">Contact</h1>
         <ul>
@@ -146,19 +147,30 @@
           <div class="skills__wrapper">
             <h4 class="skills__title">Software</h4>
             <ol class="skills__list">
-              <li class="skills__list-item">JetBrains software</li>
+              <li class="skills__list-item">JetBrains` software</li>
               <li class="skills__list-item">Visual Studio Code</li>
               <li class="skills__list-item">Unix-like OS</li>
-              <li class="skills__list-item">Windows OS & MS software</li>
             </ol>
           </div>
           <div class="skills__wrapper">
             <h4 class="skills__title">Languages</h4>
-            <ol class="skills__list" style="columns: 1">
+            <ol class="skills__list">
               <li class="skills__list-item">English - advanced</li>
             </ol>
           </div>
           </div>
+        </section>
+
+        <section>
+          <h3 class="section-title">Hobbies</h3>
+          <ol class="hobbies">
+            <li class="hobbies__item">Science</li>
+            <li class="hobbies__item">Video games</li>
+            <li class="hobbies__item">Salsa dance</li>
+            <li class="hobbies__item">Playing keyboard</li>
+            <li class="hobbies__item">Electronics</li>
+            <li class="hobbies__item">Cycling</li>
+          </ol>
         </section>
       </div>
     </main>
