--- a/public/index.html
+++ b/public/index.html
@@ -65,23 +65,6 @@
         <h2 id="name__subtitle">Software engineer</h2>
 
         <section>
-          <h3 class="section-title">Education</h3>
-          <ol>
-            <li>
-              <div class="date-range">
-                2014 - 2018
-              </div>
-              <div class="list-item__wrapper">
-              <h4 class="list-item__header">Poznań University of Technology</h4>
-              <span class="list-item__subtitle education__title">
-                Engineer of Information Technology and Computer Science
-              </span>
-              </div>
-            </li>
-          </ol>
-        </section>
-
-        <section>
           <h3 class="section-title">Experience</h3>
           <ol>
             <li>
@@ -92,6 +75,23 @@
               <h4 class="list-item__header"> Apilia Marciniak-Parchimowicz</h4>
               <span class="list-item__subtitle">
                 Fullstack software engineer
+              </span>
+              </div>
+            </li>
+          </ol>
+        </section>
+
+        <section>
+          <h3 class="section-title">Education</h3>
+          <ol>
+            <li>
+              <div class="date-range">
+                2014 - 2018
+              </div>
+              <div class="list-item__wrapper">
+              <h4 class="list-item__header">Poznań University of Technology</h4>
+              <span class="list-item__subtitle education__title">
+                Engineer of Information Technology and Computer Science
               </span>
               </div>
             </li>
@@ -130,7 +130,7 @@
               <li class="skills__list-item">Node.js</li>
               <li class="skills__list-item">Redux pattern</li>
               <li class="skills__list-item">HTML 5</li>
-              <li class="skills__list-item">CSS 3</li>
+              <li class="skills__list-item">CSS 3 and SASS</li>
               <li class="skills__list-item">Keycloak</li>
               <li class="skills__list-item">Google Firebase</li>
             </ol>
