--- a/public/index.html
+++ b/public/index.html
@@ -1,182 +1,186 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+<head>
+  <meta charset="utf-8"/>
+  <meta http-equiv="x-ua-compatible" content="ie=edge"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-    <title></title>
-    <link rel="stylesheet" href="./main.css" />
-    <link rel="stylesheet" href="./personal.css" />
-    <link rel="icon" href="images/favicon.png" />
-    <link
+  <title></title>
+  <link rel="stylesheet" href="./main.css"/>
+  <link rel="stylesheet" href="./personal.css"/>
+  <link rel="icon" href="images/favicon.png"/>
+  <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
       integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
       crossorigin="anonymous"
-    />
-  </head>
+  />
+</head>
 
-  <body>
-    <main>
-      <aside id="personal">
-        <img id="photo" 
-        src="./face.jpg" width="709" height="1024"></img>
+<body>
+<main>
+  <aside id="personal">
+    <img id="photo"
+         src="./face.jpg" width="709" height="1024"></img>
 
-        <h1 id="contact">Contact</h1>
-        <ul>
-          <li>
-              <span class="icon fas fa-map-marker-alt"></span>
-            <span class="personal__data"> Poznań 61-131 ul. Polanka 8d/4 </span>
-          </li>
-          <li>
-              <span class="icon fas fa-phone-alt"></span>
-            <span class="personal__data"> +48 669 759 669 </span>
-          </li>
-          <li>
-              <span class="icon fas fa-at"></span>
-            <a
-              href="mailto:adrian950113@gmail.com"
-              class="personal__data--link"
-            >
-              adrian950113@gmail.com
-            </a>
-          </li>
-          <li>
-              <span class="icon fab fa-github"></span>
-            <a href="https://github.com/A-Dabek/" class="personal__data--link">
-              /A-Dabek
-            </a>
-          </li>
-          <li>
-              <span class="icon fab fa-linkedin"></span>
-            <a
-              href="https://www.linkedin.com/in/adrian-d%C4%85bek-6490601bb/"
-              class="personal__data--link"
-            >
-              in/adrian-dąbek-6490601bb
-            </a>
-          </li>
-        </ul>
-      </aside>
+    <h1 id="contact">Contact</h1>
+    <ul>
+      <li>
+        <span class="icon fas fa-map-marker-alt"></span>
+        <span class="personal__data"> Poznań 61-131 ul. Polanka 8d/4 </span>
+      </li>
+      <li>
+        <span class="icon fas fa-phone-alt"></span>
+        <span class="personal__data"> +48 669 759 669 </span>
+      </li>
+      <li>
+        <span class="icon fas fa-at"></span>
+        <a
+            href="mailto:adrian950113@gmail.com"
+            class="personal__data--link"
+        >
+          adrian950113@gmail.com
+        </a>
+      </li>
+      <li>
+        <span class="icon fab fa-github"></span>
+        <a href="https://github.com/A-Dabek/" class="personal__data--link">
+          /A-Dabek
+        </a>
+      </li>
+      <li>
+        <span class="icon fab fa-linkedin"></span>
+        <a
+            href="https://www.linkedin.com/in/adrian-dabek"
+            class="personal__data--link"
+        >
+          in/adrian-dabek
+        </a>
+      </li>
+    </ul>
+  </aside>
 
-      <div id="history">
-        <h1 id="name">Adrian Dąbek</h1>
-        <h2 id="name__subtitle">Software engineer</h2>
+  <div id="history">
+    <h1 id="name">Adrian Dąbek</h1>
+    <h2 id="name__subtitle">Software engineer</h2>
 
-        <section>
-          <h3 class="section-title">Experience</h3>
-          <ol>
-            <li>
-              <div class="date-range">
-                2017 - today
-              </div>
-              <div class="list-item__wrapper">
-              <h4 class="list-item__header"> Apilia Marciniak-Parchimowicz</h4>
-              <span class="list-item__subtitle">
+    <section>
+      <h3 class="section-title">Experience</h3>
+      <ol>
+        <li>
+          <div class="date-range">
+            2017 - today
+          </div>
+          <div class="list-item__wrapper">
+            <h4 class="list-item__header"> Apilia Marciniak-Parchimowicz</h4>
+            <span class="list-item__subtitle">
                 Fullstack software engineer
               </span>
-              </div>
-            </li>
-          </ol>
-        </section>
+          </div>
+        </li>
+      </ol>
+    </section>
 
-        <section>
-          <h3 class="section-title">Education</h3>
-          <ol>
-            <li>
-              <div class="date-range">
-                2014 - 2018
-              </div>
-              <div class="list-item__wrapper">
-              <h4 class="list-item__header">Poznań University of Technology</h4>
-              <span class="list-item__subtitle education__title">
+    <section>
+      <h3 class="section-title">Education</h3>
+      <ol>
+        <li>
+          <div class="date-range">
+            2014 - 2018
+          </div>
+          <div class="list-item__wrapper">
+            <h4 class="list-item__header">Poznań University of Technology</h4>
+            <span class="list-item__subtitle education__title">
                 Engineer of Information Technology and Computer Science
               </span>
-              </div>
-            </li>
-          </ol>
-        </section>
+          </div>
+        </li>
+      </ol>
+    </section>
 
-        <section>
-          <h3 class="section-title">Skills</h3>
-          <div class="skills__container">
-          <div class="skills__wrapper">
-            <h4 class="skills__title">Frameworks</h4>
-            <ol class="skills__list">
-              <li class="skills__list-item">Angular</li>
-                <li class="skills__list-item">Springboot</li>
-                <li class="skills__list-item">React</li>
-                <li class="skills__list-item">Vue</li>
-            </ol>
-          </div>
-          <div class="skills__wrapper">
-            <h4 class="skills__title">Programming languages</h4>
-            <ol class="skills__list">
-                <li class="skills__list-item">Javascript</li>
-                <li class="skills__list-item">Typescript</li>
-                <li class="skills__list-item">Java</li>
-                <li class="skills__list-item">SQL</li>
-                <li class="skills__list-item">Python</li>
-                <li class="skills__list-item">Kotlin</li>
-                <li class="skills__list-item">C</li>
-            </ol>
-          </div>
-          <div class="skills__wrapper">
-            <h4 class="skills__title">Technologies</h4>
-            <ol class="skills__list">
-              <li class="skills__list-item">GIT</li>
-              <li class="skills__list-item">RxJS</li>
-              <li class="skills__list-item">Node.js</li>
-              <li class="skills__list-item">Redux pattern</li>
-              <li class="skills__list-item">HTML 5</li>
-              <li class="skills__list-item">CSS 3 and SASS</li>
-              <li class="skills__list-item">Keycloak</li>
-              <li class="skills__list-item">Google Firebase</li>
-            </ol>
-          </div>
-          <div class="skills__wrapper">
-            <h4 class="skills__title">Strengths</h4>
-            <ol class="skills__list">
-              <li class="skills__list-item">Clean code</li>
-              <li class="skills__list-item">Reactive programming</li>
-              <li class="skills__list-item">Algorithms</li>
-              <li class="skills__list-item">Functional programming</li>
-            </ol>
-          </div>
-          <div class="skills__wrapper">
-            <h4 class="skills__title">Software</h4>
-            <ol class="skills__list">
-              <li class="skills__list-item">JetBrains` software</li>
-              <li class="skills__list-item">Visual Studio Code</li>
-              <li class="skills__list-item">Unix-like OS</li>
-            </ol>
-          </div>
-          <div class="skills__wrapper">
-            <h4 class="skills__title">Languages</h4>
-            <ol class="skills__list">
-              <li class="skills__list-item">English - advanced</li>
-            </ol>
-          </div>
-          </div>
-        </section>
-
-        <section>
-          <h3 class="section-title">Hobbies</h3>
-          <ol class="hobbies">
-            <li class="hobbies__item">Science</li>
-            <li class="hobbies__item">Video games</li>
-            <li class="hobbies__item">Salsa dance</li>
-            <li class="hobbies__item">Playing keyboard</li>
-            <li class="hobbies__item">Electronics</li>
-            <li class="hobbies__item">Cycling</li>
+    <section>
+      <h3 class="section-title">Skills</h3>
+      <div class="skills__container">
+        <div class="skills__wrapper">
+          <h4 class="skills__title">Frameworks</h4>
+          <ol class="skills__list">
+            <li class="skills__list-item">Angular</li>
+            <li class="skills__list-item">AngularJS</li>
+            <li class="skills__list-item">Springboot</li>
+            <li class="skills__list-item">Vue</li>
+            <li class="skills__list-item">React</li>
+            <li class="skills__list-item">Svelte</li>
           </ol>
-        </section>
+        </div>
+        <div class="skills__wrapper">
+          <h4 class="skills__title">Programming languages</h4>
+          <ol class="skills__list">
+            <li class="skills__list-item">Javascript</li>
+            <li class="skills__list-item">Typescript</li>
+            <li class="skills__list-item">Java</li>
+            <li class="skills__list-item">SQL</li>
+            <li class="skills__list-item">Python</li>
+            <li class="skills__list-item">Kotlin</li>
+            <li class="skills__list-item">C</li>
+          </ol>
+        </div>
+        <div class="skills__wrapper">
+          <h4 class="skills__title">Technologies</h4>
+          <ol class="skills__list">
+            <li class="skills__list-item">GIT</li>
+            <li class="skills__list-item">Docker</li>
+            <li class="skills__list-item">Jenkins</li>
+            <li class="skills__list-item">RxJS</li>
+            <li class="skills__list-item">Node.js</li>
+            <li class="skills__list-item">Redux pattern</li>
+            <li class="skills__list-item">HTML 5</li>
+            <li class="skills__list-item">CSS 3 and SASS</li>
+            <li class="skills__list-item">Keycloak</li>
+            <li class="skills__list-item">Google Firebase</li>
+          </ol>
+        </div>
+        <div class="skills__wrapper">
+          <h4 class="skills__title">Strengths</h4>
+          <ol class="skills__list">
+            <li class="skills__list-item">Clean code</li>
+            <li class="skills__list-item">Reactive programming</li>
+            <li class="skills__list-item">Algorithms</li>
+            <li class="skills__list-item">Functional programming</li>
+          </ol>
+        </div>
+        <div class="skills__wrapper">
+          <h4 class="skills__title">Software</h4>
+          <ol class="skills__list">
+            <li class="skills__list-item">JetBrains` software</li>
+            <li class="skills__list-item">Visual Studio Code</li>
+            <li class="skills__list-item">Unix-like OS</li>
+          </ol>
+        </div>
+        <div class="skills__wrapper">
+          <h4 class="skills__title">Languages</h4>
+          <ol class="skills__list">
+            <li class="skills__list-item">English - advanced</li>
+          </ol>
+        </div>
       </div>
-    </main>
-    <footer>
-      I hereby give consent for my personal data to be processed for the purpose
-      of conducting recruitment for the position for which I am applying.
-    </footer>
-  </body>
+    </section>
+
+    <section>
+      <h3 class="section-title">Hobbies</h3>
+      <ol class="hobbies">
+        <li class="hobbies__item">Playing instruments</li>
+        <li class="hobbies__item">Video games</li>
+        <li class="hobbies__item">Science</li>
+        <li class="hobbies__item">Salsa dance</li>
+        <li class="hobbies__item">Electronics</li>
+        <li class="hobbies__item">Cycling</li>
+      </ol>
+    </section>
+  </div>
+</main>
+<footer>
+  I hereby give consent for my personal data to be processed for the purpose
+  of conducting recruitment for the position for which I am applying.
+</footer>
+</body>
 </html>
