Change contact address

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <ul>
       <li>
         <span class="icon fas fa-map-marker-alt"></span>
-        <span class="personal__data"> Poznań 61-131 ul. Polanka 8d/4 </span>
+        <span class="personal__data"> Poznań 60-814 ul. Zwierzyniecka 30d/7 </span>
       </li>
       <li>
         <span class="icon fas fa-phone-alt"></span>
