Add projects and duties

--- a/public/index.html
+++ b/public/index.html
@@ -21,13 +21,13 @@
 <main>
   <aside id="personal">
     <img id="photo"
-         src="./face.jpg" width="709" height="1024"></img>
+         src="./face.jpg" width="709" height="1024">
 
     <h1 id="contact">Contact</h1>
     <ul>
       <li>
         <span class="icon fas fa-map-marker-alt"></span>
-        <span class="personal__data"> Poznań 60-814 ul. Zwierzyniecka 30d/7 </span>
+        <span class="personal__data"> Poznań 60-814 ul.&nbspZwierzyniecka 30D/7 </span>
       </li>
       <li>
         <span class="icon fas fa-phone-alt"></span>
@@ -67,7 +67,7 @@
     <section>
       <h3 class="section-title">Experience</h3>
       <ol>
-        <li>
+        <li class="flexed">
           <div class="date-range">
             2017 - today
           </div>
@@ -81,10 +81,66 @@
       </ol>
     </section>
 
+    <section class="section-projects">
+      <h3 class="section-title">Former commercial projects and duties</h3>
+      <ol>
+        <li>
+          <p class="project-description">
+            Web application for process management for biotechnological lab
+          </p>
+          <p class="project-duties">
+            Maintaining frontend written in AngularJS.
+            Maintaining CI/CD process.
+          </p>
+        </li>
+        <li>
+          <p class="project-description">
+            Web application for monitoring company's court proceedings
+          </p>
+          <p class="project-duties">
+            Gathering requirements from customers.
+            Designing and developing frontend in VueJS.
+            Developing backend in Springboot and Postgres.
+            Integrating application with company's internal systems.
+          </p>
+        </li>
+        <li>
+          <p class="project-description">
+            Web application for creating bank accounts for new customers
+          </p>
+          <p class="project-duties">
+            Implementing frontend features in Angular 8+ with accordance to UI/UX designer.
+            Creating reusable frontend packages of components.
+          </p>
+        </li>
+        <li>
+          <p class="project-description">
+            Web application for registering and processing money transfers
+          </p>
+          <p class="project-duties">
+            End-to-end project implementation.
+            Gathering requirements, designing and developing the application in Angular 10+, Springboot and Postgres.
+            Integrating application with company's internal systems.
+          </p>
+        </li>
+        <li>
+          <p class="project-description">
+            Web application for managing ownership and transactions of securities
+          </p>
+          <p class="project-duties">
+            Gathering requirements from the customer.
+            Designing and developing frontend in Angular (8+).
+            Maintaining frontend-backend (Springboot) integration and MSSQL Server database.
+            Creating a CI process using GitLab and Jenkins.
+          </p>
+        </li>
+      </ol>
+    </section>
+
     <section>
       <h3 class="section-title">Education</h3>
       <ol>
-        <li>
+        <li class="flexed">
           <div class="date-range">
             2014 - 2018
           </div>
