--- a/public/index.html
+++ b/public/index.html
@@ -1,242 +1,267 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8"/>
-  <meta http-equiv="x-ua-compatible" content="ie=edge"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title></title>
-  <link rel="stylesheet" href="./main.css"/>
-  <link rel="stylesheet" href="./personal.css"/>
-  <link rel="icon" href="images/favicon.png"/>
-  <link
+    <title></title>
+    <link rel="stylesheet" href="./main.css" />
+    <link rel="stylesheet" href="./personal.css" />
+    <link rel="icon" href="images/favicon.png" />
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
       integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
       crossorigin="anonymous"
-  />
-</head>
+    />
+  </head>
 
-<body>
-<main>
-  <aside id="personal">
-    <img id="photo"
-         src="./face.jpg" width="709" height="1024">
+  <body>
+    <main>
+      <aside id="personal">
+        <img id="photo" src="./face.jpg" width="709" height="1024" />
 
-    <h1 id="contact">Contact</h1>
-    <ul>
-      <li>
-        <span class="icon fas fa-map-marker-alt"></span>
-        <span class="personal__data"> Poznań 60-814 ul.&nbspZwierzyniecka 30D/7 </span>
-      </li>
-      <li>
-        <span class="icon fas fa-phone-alt"></span>
-        <span class="personal__data"> +48 669 759 669 </span>
-      </li>
-      <li>
-        <span class="icon fas fa-at"></span>
-        <a
-            href="mailto:adrian950113@gmail.com"
-            class="personal__data--link"
-        >
-          adrian950113@gmail.com
-        </a>
-      </li>
-      <li>
-        <span class="icon fab fa-github"></span>
-        <a href="https://github.com/A-Dabek/" class="personal__data--link">
-          /A-Dabek
-        </a>
-      </li>
-      <li>
-        <span class="icon fab fa-linkedin"></span>
-        <a
-            href="https://www.linkedin.com/in/adrian-dabek"
-            class="personal__data--link"
-        >
-          in/adrian-dabek
-        </a>
-      </li>
-    </ul>
-  </aside>
+        <h1 id="contact">Contact</h1>
+        <ul>
+          <li>
+            <span class="icon fas fa-map-marker-alt"></span>
+            <span class="personal__data">
+              Poznań 60-814 ul.&nbspZwierzyniecka 30D/7
+            </span>
+          </li>
+          <li>
+            <span class="icon fas fa-phone-alt"></span>
+            <span class="personal__data"> +48 669 759 669 </span>
+          </li>
+          <li>
+            <span class="icon fas fa-at"></span>
+            <a
+              href="mailto:adrian950113@gmail.com"
+              class="personal__data--link"
+            >
+              adrian950113@gmail.com
+            </a>
+          </li>
+          <li>
+            <span class="icon fab fa-github"></span>
+            <a href="https://github.com/A-Dabek/" class="personal__data--link">
+              /A-Dabek
+            </a>
+          </li>
+          <li>
+            <span class="icon fab fa-linkedin"></span>
+            <a
+              href="https://www.linkedin.com/in/adrian-dabek"
+              class="personal__data--link"
+            >
+              in/adrian-dabek
+            </a>
+          </li>
+        </ul>
+      </aside>
 
-  <div id="history">
-    <h1 id="name">Adrian Dąbek</h1>
-    <h2 id="name__subtitle">Software engineer</h2>
+      <div id="history">
+        <h1 id="name">Adrian Dąbek</h1>
+        <h2 id="name__subtitle">Software engineer</h2>
 
-    <section>
-      <h3 class="section-title">Experience</h3>
-      <ol>
-        <li class="flexed">
-          <div class="date-range">
-            2017 - today
+        <section>
+          <h3 class="section-title">Experience</h3>
+          <ol>
+            <li class="flexed">
+              <div class="date-range">2021 - today</div>
+              <div class="list-item__wrapper">
+                <h4 class="list-item__header">JCommerce</h4>
+                <span class="list-item__subtitle">
+                  Frontend software engineer
+                </span>
+              </div>
+            </li>
+            <li class="flexed">
+              <div class="date-range">2017 - 2021</div>
+              <div class="list-item__wrapper">
+                <h4 class="list-item__header">Apilia Marciniak-Parchimowicz</h4>
+                <span class="list-item__subtitle">
+                  Fullstack software engineer
+                </span>
+              </div>
+            </li>
+          </ol>
+        </section>
+
+        <section class="section-projects">
+          <h3 class="section-title">Former commercial projects and duties</h3>
+          <ol>
+            <li>
+              <p class="project-description">
+                Highly customizable digital banking platform
+              </p>
+              <p class="project-duties">
+                Maintaining and developing frontend written in Angular.
+                Maintaining CI/CD process. Keeping up with latest industry
+                standards. Contributing to libraries shared by the organization.
+                Researching and implementing improvements to company's way of
+                working.
+              </p>
+            </li>
+            <li>
+              <p class="project-description">
+                Web application for process management for biotechnological lab
+              </p>
+              <p class="project-duties">
+                Maintaining frontend written in AngularJS. Maintaining CI/CD
+                process.
+              </p>
+            </li>
+            <li>
+              <p class="project-description">
+                Web application for monitoring company's court proceedings
+              </p>
+              <p class="project-duties">
+                Gathering requirements from customers. Designing and developing
+                frontend in VueJS. Developing backend in Springboot and
+                Postgres. Integrating application with company's internal
+                systems.
+              </p>
+            </li>
+            <li>
+              <p class="project-description">
+                Web application for creating bank accounts for new customers
+              </p>
+              <p class="project-duties">
+                Implementing frontend features in Angular 8+ with accordance to
+                UI/UX designer. Creating reusable frontend packages of
+                components.
+              </p>
+            </li>
+            <li>
+              <p class="project-description">
+                Web application for registering and processing money transfers
+              </p>
+              <p class="project-duties">
+                End-to-end project implementation. Gathering requirements,
+                designing and developing the application in Angular 10+,
+                Springboot and Postgres. Integrating application with company's
+                internal systems.
+              </p>
+            </li>
+            <li>
+              <p class="project-description">
+                Web application for managing ownership and transactions of
+                securities
+              </p>
+              <p class="project-duties">
+                Gathering requirements from the customer. Designing and
+                developing frontend in Angular (8+). Maintaining
+                frontend-backend (Springboot) integration and MSSQL Server
+                database. Creating a CI process using GitLab and Jenkins.
+              </p>
+            </li>
+          </ol>
+        </section>
+
+        <section>
+          <h3 class="section-title">Education</h3>
+          <ol>
+            <li class="flexed">
+              <div class="date-range">2014 - 2018</div>
+              <div class="list-item__wrapper">
+                <h4 class="list-item__header">
+                  Poznań University of Technology
+                </h4>
+                <span class="list-item__subtitle education__title">
+                  Engineer of Information Technology and Computer Science
+                </span>
+              </div>
+            </li>
+          </ol>
+        </section>
+
+        <section>
+          <h3 class="section-title">Skills</h3>
+          <div class="skills__container">
+            <div class="skills__wrapper">
+              <h4 class="skills__title">Frameworks</h4>
+              <ol class="skills__list">
+                <li class="skills__list-item">Angular</li>
+                <li class="skills__list-item">AngularJS</li>
+                <li class="skills__list-item">Springboot</li>
+                <li class="skills__list-item">Vue</li>
+                <li class="skills__list-item">React</li>
+                <li class="skills__list-item">Svelte</li>
+              </ol>
+            </div>
+            <div class="skills__wrapper">
+              <h4 class="skills__title">Programming languages</h4>
+              <ol class="skills__list">
+                <li class="skills__list-item">Typescript</li>
+                <li class="skills__list-item">ECMAScript</li>
+                <li class="skills__list-item">Java</li>
+                <li class="skills__list-item">Kotlin</li>
+                <li class="skills__list-item">SQL</li>
+                <li class="skills__list-item">Python</li>
+                <li class="skills__list-item">Bash</li>
+                <li class="skills__list-item">Groovy</li>
+              </ol>
+            </div>
+            <div class="skills__wrapper">
+              <h4 class="skills__title">Technologies</h4>
+              <ol class="skills__list">
+                <li class="skills__list-item">Nx</li>
+                <li class="skills__list-item">GIT</li>
+                <li class="skills__list-item">Docker</li>
+                <li class="skills__list-item">Jenkins</li>
+                <li class="skills__list-item">RxJS</li>
+                <li class="skills__list-item">Node.js</li>
+                <li class="skills__list-item">Redux pattern</li>
+                <li class="skills__list-item">Semantic HTML</li>
+                <li class="skills__list-item">CSS preprocessors</li>
+                <li class="skills__list-item">OAuth (Keycloak)</li>
+                <li class="skills__list-item">Google Firebase</li>
+              </ol>
+            </div>
+            <div class="skills__wrapper">
+              <h4 class="skills__title">Strengths</h4>
+              <ol class="skills__list">
+                <li class="skills__list-item">Clean code</li>
+                <li class="skills__list-item">Reactive programming</li>
+                <li class="skills__list-item">Algorithms</li>
+                <li class="skills__list-item">Functional programming</li>
+              </ol>
+            </div>
+            <div class="skills__wrapper">
+              <h4 class="skills__title">Software</h4>
+              <ol class="skills__list">
+                <li class="skills__list-item">JetBrains</li>
+                <li class="skills__list-item">VSCode</li>
+                <li class="skills__list-item">Unix/Win/MacOS</li>
+                <li class="skills__list-item">Atlassian</li>
+                <li class="skills__list-item">Gitlab</li>
+              </ol>
+            </div>
+            <div class="skills__wrapper">
+              <h4 class="skills__title">Languages</h4>
+              <ol class="skills__list">
+                <li class="skills__list-item">English - advanced</li>
+              </ol>
+            </div>
           </div>
-          <div class="list-item__wrapper">
-            <h4 class="list-item__header"> Apilia Marciniak-Parchimowicz</h4>
-            <span class="list-item__subtitle">
-                Fullstack software engineer
-              </span>
-          </div>
-        </li>
-      </ol>
-    </section>
+        </section>
 
-    <section class="section-projects">
-      <h3 class="section-title">Former commercial projects and duties</h3>
-      <ol>
-        <li>
-          <p class="project-description">
-            Web application for process management for biotechnological lab
-          </p>
-          <p class="project-duties">
-            Maintaining frontend written in AngularJS.
-            Maintaining CI/CD process.
-          </p>
-        </li>
-        <li>
-          <p class="project-description">
-            Web application for monitoring company's court proceedings
-          </p>
-          <p class="project-duties">
-            Gathering requirements from customers.
-            Designing and developing frontend in VueJS.
-            Developing backend in Springboot and Postgres.
-            Integrating application with company's internal systems.
-          </p>
-        </li>
-        <li>
-          <p class="project-description">
-            Web application for creating bank accounts for new customers
-          </p>
-          <p class="project-duties">
-            Implementing frontend features in Angular 8+ with accordance to UI/UX designer.
-            Creating reusable frontend packages of components.
-          </p>
-        </li>
-        <li>
-          <p class="project-description">
-            Web application for registering and processing money transfers
-          </p>
-          <p class="project-duties">
-            End-to-end project implementation.
-            Gathering requirements, designing and developing the application in Angular 10+, Springboot and Postgres.
-            Integrating application with company's internal systems.
-          </p>
-        </li>
-        <li>
-          <p class="project-description">
-            Web application for managing ownership and transactions of securities
-          </p>
-          <p class="project-duties">
-            Gathering requirements from the customer.
-            Designing and developing frontend in Angular (8+).
-            Maintaining frontend-backend (Springboot) integration and MSSQL Server database.
-            Creating a CI process using GitLab and Jenkins.
-          </p>
-        </li>
-      </ol>
-    </section>
-
-    <section>
-      <h3 class="section-title">Education</h3>
-      <ol>
-        <li class="flexed">
-          <div class="date-range">
-            2014 - 2018
-          </div>
-          <div class="list-item__wrapper">
-            <h4 class="list-item__header">Poznań University of Technology</h4>
-            <span class="list-item__subtitle education__title">
-                Engineer of Information Technology and Computer Science
-              </span>
-          </div>
-        </li>
-      </ol>
-    </section>
-
-    <section>
-      <h3 class="section-title">Skills</h3>
-      <div class="skills__container">
-        <div class="skills__wrapper">
-          <h4 class="skills__title">Frameworks</h4>
-          <ol class="skills__list">
-            <li class="skills__list-item">Angular</li>
-            <li class="skills__list-item">AngularJS</li>
-            <li class="skills__list-item">Springboot</li>
-            <li class="skills__list-item">Vue</li>
-            <li class="skills__list-item">React</li>
-            <li class="skills__list-item">Svelte</li>
+        <section>
+          <h3 class="section-title">Hobbies</h3>
+          <ol class="hobbies">
+            <li class="hobbies__item">Music instruments</li>
+            <li class="hobbies__item">Video games</li>
+            <li class="hobbies__item">Science</li>
+            <li class="hobbies__item">Cycling</li>
           </ol>
-        </div>
-        <div class="skills__wrapper">
-          <h4 class="skills__title">Programming languages</h4>
-          <ol class="skills__list">
-            <li class="skills__list-item">Javascript</li>
-            <li class="skills__list-item">Typescript</li>
-            <li class="skills__list-item">Java</li>
-            <li class="skills__list-item">SQL</li>
-            <li class="skills__list-item">Python</li>
-            <li class="skills__list-item">Kotlin</li>
-            <li class="skills__list-item">C</li>
-          </ol>
-        </div>
-        <div class="skills__wrapper">
-          <h4 class="skills__title">Technologies</h4>
-          <ol class="skills__list">
-            <li class="skills__list-item">GIT</li>
-            <li class="skills__list-item">Docker</li>
-            <li class="skills__list-item">Jenkins</li>
-            <li class="skills__list-item">RxJS</li>
-            <li class="skills__list-item">Node.js</li>
-            <li class="skills__list-item">Redux pattern</li>
-            <li class="skills__list-item">HTML 5</li>
-            <li class="skills__list-item">CSS 3 and SASS</li>
-            <li class="skills__list-item">Keycloak</li>
-            <li class="skills__list-item">Google Firebase</li>
-          </ol>
-        </div>
-        <div class="skills__wrapper">
-          <h4 class="skills__title">Strengths</h4>
-          <ol class="skills__list">
-            <li class="skills__list-item">Clean code</li>
-            <li class="skills__list-item">Reactive programming</li>
-            <li class="skills__list-item">Algorithms</li>
-            <li class="skills__list-item">Functional programming</li>
-          </ol>
-        </div>
-        <div class="skills__wrapper">
-          <h4 class="skills__title">Software</h4>
-          <ol class="skills__list">
-            <li class="skills__list-item">JetBrains` software</li>
-            <li class="skills__list-item">Visual Studio Code</li>
-            <li class="skills__list-item">Unix-like OS</li>
-          </ol>
-        </div>
-        <div class="skills__wrapper">
-          <h4 class="skills__title">Languages</h4>
-          <ol class="skills__list">
-            <li class="skills__list-item">English - advanced</li>
-          </ol>
-        </div>
+        </section>
       </div>
-    </section>
-
-    <section>
-      <h3 class="section-title">Hobbies</h3>
-      <ol class="hobbies">
-        <li class="hobbies__item">Playing instruments</li>
-        <li class="hobbies__item">Video games</li>
-        <li class="hobbies__item">Science</li>
-        <li class="hobbies__item">Salsa dance</li>
-        <li class="hobbies__item">Electronics</li>
-        <li class="hobbies__item">Cycling</li>
-      </ol>
-    </section>
-  </div>
-</main>
-<footer>
-  I hereby give consent for my personal data to be processed for the purpose
-  of conducting recruitment for the position for which I am applying.
-</footer>
-</body>
+    </main>
+    <footer>
+      I hereby give consent for my personal data to be processed for the purpose
+      of conducting recruitment for the position for which I am applying.
+    </footer>
+  </body>
 </html>
